yamlfiles/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: trips
        image: craksdemo.azurecr.io/trips:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: secrets-store01
          mountPath: /secrets
          readOnly: true
      volumes:
        - name: secrets-store01
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-aks-demo"
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: trips
