yamlfiles/tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: craksdemo.azurecr.io/tripviewer:1.0
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: tripsviewer
